# Cpp_Projects

./: .gitignore  Builder_DesingPattern.cpp  Factory_DesignPattern2.cpp  Factory_DesingPattern.cpp  MyString_Class.cpp
BankManagement/: AccountManager.cpp  AccountManager.hpp  BankAccount.cpp  BankAccount.hpp  BankException.hpp  BankManager.cpp  BankManager.hpp  Transaction.cpp  Transaction.hpp  TransactionManager.cpp  TransactionManager.hpp  commonType.hpp  highLevelArchitecture.md  main.cpp
Custom_STL/vector/include/: Vector.hpp
Custom_STL/vector/src/: Vector.cpp
LibarryManagement/: Book.cpp  Book.hpp  BookExceptions.hpp  BookManagement.cpp  BookManagement.hpp  main.cpp
LibraryManagement/: CMakeLists.txt  architecture.txt
LibraryManagement/include/: Book.hpp  BookManager.hpp  LibraryManager.hpp  User.hpp  commonTypes.hpp
LibraryManagement/src/: LibraryManager.cpp  UserManager.cpp
LibraryManagement2/: Book.cpp  BookManager.cpp  BookManager.hpp  CMakeLists.txt  User.cpp  User.hpp  commonTypes.hpp  main.cpp
LibraryManagement2/include/: Book.hpp  BookException.hpp  BookManager.hpp  User.hpp  UserManager.hpp
LibraryManagement2/src/: Book.cpp  BookManager.cpp  User.cpp  UserManager.cpp  commonTypes.cpp
MyClass/: CMakeLists.txt
MyClass/include/: MyClass.h
MyClass/src/: MyClass.cpp
MyClass/test-src/: testMyClass.cpp
ValidParentheses/: ValidParentheses.cpp
